--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -68,6 +68,16 @@
 		margin-bottom: 22px;
 		padding-left: 30px;
 		display: inline-block;
+		position: relative;
+		&::before {
+			content: '';
+			background-image: url(../images/envelope.svg);
+			position: absolute;
+			top: 8px;
+			left: 0;
+			width: 16px;
+			height: 12px;
+		}
 	}
 	&__form {
 		display: flex;
@@ -104,6 +114,39 @@
 		margin-left: 100px;
 	}
 	&__social-link {
+		padding-left: 28px;
+		position: relative;
+		&::before {
+			content: '';
+			position: absolute;
+			top: 2px;
+			left: 0;
+			width: 16px;
+			height: 16px;
+		}
+	}
+	&__social-link--facebook::before {
+		background-image: url(../images/facebook.svg);
+	}
+	&__social-link--instagram::before {
+		background-image: url(../images/instagram.svg);
+		width: 14px;
+		height: 14px;
+		top: 4px;
+	}
+	&__social-link--pinterest::before {
+		background-image: url(../images/Pinterest.svg);
+	}
+	&__social-link--whatsapp::before {
+		background-image: url(../images/whatsapp.svg);
+		width: 14px;
+		height: 14px;
+	}
+	&__social-link--youtube::before {
+		background-image: url(../images/youtube.svg);
+		width: 18px;
+		height: 12px;
+		top: 4px;
 	}
 	&__social-item,
 	&__menu-list {
