feat: start section decor

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -414,3 +414,35 @@
     color: #707070;
   }
 }
+
+.decor {
+  padding: 170px 0 155px;
+  background-image: url(../images/content/decor-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 600px;
+
+  &__title {
+    max-width: 540px;
+    color: $title;
+    font-size: 60px;
+    line-height: 80px;
+    padding-bottom: 22px;
+    margin-bottom: 22px;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      width: 200px;
+      background: #6D7278;
+      height: 1px;
+    }
+  }
+
+  &__text {
+    max-width: 540px;
+  }
+}
