--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -691,4 +691,37 @@
 		justify-content: center;
 		align-items: center;
 	}
+	&__popup-imgbtn {
+		cursor: pointer;
+	}
+}
+
+.inspiration {
+	&__inner {
+		display: flex;
+	}
+	&__title {
+		color: $title;
+		font-size: 36px;
+		line-height: 60px;
+		@extend %title-font;
+		padding-bottom: 16px;
+		margin-bottom: 24px;
+		position: relative;
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			background: #6d7278;
+			width: 200px;
+			height: 1px;
+		}
+	}
+	&__text {
+		margin-bottom: 30px;
+	}
+	&__content {
+		width: 825px;
+	}
 }
