--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -359,7 +359,7 @@
 }
 
 .new-collection {
-	padding: 45px 0 105px;
+	padding: 45px 0 35px;
 	text-align: center;
 
 	&__title {
@@ -394,6 +394,7 @@
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
 	grid-gap: 30px;
+	padding-bottom: 70px;
 
 	&__item {
 		position: relative;
@@ -760,5 +761,16 @@
 		border-radius: 4px;
 		background-color: $title;
 		margin-top: -2px;
+	}
+}
+
+.partners {
+	padding: 16px 0 60px;
+	&__items {
+		display: grid;
+		grid-template-columns: repeat(5, 1fr);
+	}
+	&__item {
+		margin: 0 auto;
 	}
 }
