--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -86,26 +86,6 @@
 		max-width: 475px;
 	}
 
-	&__info-email {
-		font-weight: 600;
-		font-size: 14px;
-		color: $title;
-		margin-bottom: 22px;
-		padding-left: 30px;
-		display: inline-block;
-		position: relative;
-
-		&::before {
-			content: '';
-			background-image: url(../images/envelope.svg);
-			position: absolute;
-			top: 8px;
-			left: 0;
-			width: 16px;
-			height: 12px;
-		}
-	}
-
 	&__form {
 		display: flex;
 	}
@@ -789,4 +769,32 @@
 .map {
 	margin-top: -53px;
 	margin-bottom: 50px;
+}
+
+.contact {
+	padding-bottom: 100px;
+	&__title {
+		color: $title;
+		@extend %title-font;
+		font-size: 36px;
+		line-height: 60px;
+		padding-bottom: 30px;
+		margin-bottom: 40px;
+		position: relative;
+		&::after {
+			content: '';
+			position: absolute;
+			bottom: 0;
+			left: 0;
+			height: 2px;
+			width: 200px;
+			background-color: #6d7278;
+		}
+	}
+	&__social {
+		padding-left: 284px;
+	}
+	&__form {
+		padding-left: 284px;
+	}
 }
