--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -264,17 +264,21 @@
 	padding: 13px 14px;
 	position: relative;
 	z-index: 999;
+
 	&__list {
 		display: flex;
 	}
+
 	&__item::after {
 		content: '/';
 		margin-left: -4px;
 		margin-right: 4px;
 	}
+
 	&__item:last-child::after {
 		display: none;
 	}
+
 	&__link {
 		font-size: 14px;
 		color: $default;
@@ -471,6 +475,7 @@
 
 .works-path {
 	padding: 80px 0 30px;
+
 	&__title {
 		@extend %title-font;
 		text-align: center;
@@ -479,11 +484,13 @@
 		font-size: 36px;
 		line-height: 51px;
 	}
+
 	&__items-box {
 		display: flex;
 		align-items: flex-end;
 		border-bottom: 2px solid rgba($title, 0.7);
 		position: relative;
+
 		&::before {
 			content: '';
 			position: absolute;
@@ -495,6 +502,7 @@
 			background: $title;
 		}
 	}
+
 	&__item {
 		width: 250px;
 		display: flex;
@@ -503,8 +511,10 @@
 		position: relative;
 		height: 100%;
 	}
+
 	&__item--production {
 		margin-left: 317px;
+
 		&::after {
 			content: '';
 			position: absolute;
@@ -515,13 +525,16 @@
 			background: rgba($title, 0.7);
 		}
 	}
+
 	&__item--production,
 	&__item--consultation {
 		padding-bottom: 38px;
 	}
+
 	&__item--measurements {
 		padding-top: 38px;
 		margin-left: 305px;
+
 		&::before {
 			content: '';
 			position: absolute;
@@ -532,11 +545,13 @@
 			background: rgba($title, 0.7);
 		}
 	}
+
 	&__item-title {
 		margin-left: 13px;
 		color: $title;
 		@extend %title-font;
 	}
+
 	&__item-text {
 		margin-top: 13px;
 	}
@@ -544,10 +559,12 @@
 
 .gallery {
 	padding: 80px 0 90px;
+
 	&__buttons {
 		text-align: center;
 		margin-bottom: 40px;
 	}
+
 	&__btn {
 		margin: 0 13px;
 		border-color: transparent;
@@ -559,31 +576,37 @@
 		font-weight: 600;
 		cursor: pointer;
 	}
+
 	.mixitup-control-active {
 		background-color: #ffef35;
 		color: $title;
 		border: 1px solid #ffef35;
 	}
+
 	&__items {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
 		grid-template-rows: repeat(2, 1fr);
 		grid-gap: 30px 35px;
 	}
+
 	&__item:first-child {
 		grid-column: span 2;
 		grid-row: span 2;
 	}
+
 	&__item img {
 		object-fit: cover;
 		width: 100%;
 		height: 100%;
 		max-height: 1150px;
 	}
+
 	&.gallery-page {
 		.galery__item img {
 			max-height: 1165px;
 		}
+
 		.gallery__item:nth-child(8) {
 			grid-column: span 2;
 			grid-row: span 2;
@@ -593,6 +616,7 @@
 
 .blog-box {
 	padding-bottom: 100px;
+
 	&__title {
 		color: $title;
 		@extend %title-font;
@@ -602,26 +626,31 @@
 		text-align: center;
 		max-width: 430px;
 	}
+
 	&__items {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		grid-gap: 30px;
 	}
+
 	&__img-link {
 		margin-bottom: 19px;
 		display: inline-block;
 	}
+
 	&__links {
 		margin-bottom: 9px;
 		font-size: 14px;
 		font-weight: 600;
 		color: #707070;
 	}
+
 	&__date,
 	&__author,
 	&__theme {
 		color: inherit;
 	}
+
 	&__item-title {
 		color: $title;
 		font-size: 24px;
@@ -640,15 +669,18 @@
 		padding: 160px 0;
 		margin-top: -53px;
 	}
+
 	&__prev-title {
 		color: $title;
 		@extend %title-font;
 		font-size: 60px;
 		line-height: 80px;
 	}
+
 	&__content {
 		padding: 130px 0 40px;
 	}
+
 	&__title {
 		color: $title;
 		@extend %title-font;
@@ -657,6 +689,7 @@
 		padding-bottom: 22px;
 		margin-bottom: 22px;
 		position: relative;
+
 		&::after {
 			content: '';
 			position: absolute;
@@ -667,12 +700,15 @@
 			background: #6d7278;
 		}
 	}
+
 	&__text {
 		padding-left: 284px;
+
 		p {
 			margin-bottom: 30px;
 		}
 	}
+
 	&__popup {
 		background-image: url(../images/popup-bg.jpg);
 		background-repeat: no-repeat;
@@ -683,6 +719,7 @@
 		justify-content: center;
 		align-items: center;
 	}
+
 	&__popup-imgbtn {
 		cursor: pointer;
 	}
@@ -691,6 +728,7 @@
 .inspiration {
 	padding-top: 100px;
 	position: relative;
+
 	&::after {
 		content: '';
 		position: absolute;
@@ -701,15 +739,18 @@
 		height: 362px;
 		z-index: -1;
 	}
+
 	&__inner {
 		display: flex;
 		justify-content: center;
 		align-items: center;
 	}
+
 	&__images {
 		margin-right: 78px;
 		margin-left: -230px;
 	}
+
 	&__title {
 		color: $title;
 		font-size: 36px;
@@ -718,6 +759,7 @@
 		padding-bottom: 16px;
 		margin-bottom: 24px;
 		position: relative;
+
 		&::after {
 			content: '';
 			position: absolute;
@@ -728,18 +770,22 @@
 			height: 1px;
 		}
 	}
+
 	&__text {
 		margin-bottom: 30px;
 	}
+
 	&__content {
 		width: 825px;
 	}
+
 	&__item {
 		color: $title;
 		@extend %title-font;
 		line-height: 23px;
 		margin-bottom: 33px;
 	}
+
 	&__item-content {
 		display: flex;
 		justify-content: space-between;
@@ -747,6 +793,7 @@
 		border-bottom: 2px solid #fff;
 		border-radius: 4px;
 	}
+
 	&__line {
 		height: 2px;
 		border-radius: 4px;
@@ -757,10 +804,12 @@
 
 .partners {
 	padding: 16px 0 60px;
+
 	&__items {
 		display: grid;
 		grid-template-columns: repeat(5, 1fr);
 	}
+
 	&__item {
 		margin: 0 auto;
 	}
@@ -773,6 +822,7 @@
 
 .contact {
 	padding-bottom: 100px;
+
 	&__title {
 		color: $title;
 		@extend %title-font;
@@ -781,6 +831,7 @@
 		padding-bottom: 30px;
 		margin-bottom: 40px;
 		position: relative;
+
 		&::after {
 			content: '';
 			position: absolute;
@@ -791,10 +842,123 @@
 			background-color: #6d7278;
 		}
 	}
-	&__social {
+
+	.contact__social {
+		padding-left: 284px;
+		display: flex;
+		margin-bottom: 20px;
+	}
+
+	&__social-item+.contact__social-item {
+		padding-left: 40px;
+
+	}
+
+	&__text {
+		margin-bottom: 10px;
+	}
+
+	&__phone {
+		color: $default;
+
+	}
+
+	&__city {
+		margin-bottom: 16px;
+	}
+
+	&__box {
 		padding-left: 284px;
 	}
+
 	&__form {
 		padding-left: 284px;
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	&__form-input {
+		border: 1px solid #dfdfdf;
+		border-radius: 20px;
+		padding: 6px 17px;
+		margin-bottom: 13px;
+		width: 48%;
+
+		&::placeholder {
+			color: #A1A1A1;
+			font-family: 'Open Sans', sans-serif;
+			font-size: 16px;
+			line-height: 27px;
+			font-weight: 400;
+		}
+	}
+
+	&__form-area {
+		width: 100%;
+		border: 1px solid #dfdfdf;
+		border-radius: 24px;
+		padding: 14px 17px;
+		min-height: 125px;
+		resize: none;
+		margin-bottom: 20px;
+
+		&::placeholder {
+			color: #A1A1A1;
+			font-family: 'Open Sans', sans-serif;
+			font-size: 16px;
+			line-height: 27px;
+			font-weight: 400;
+		}
+	}
+
+	&__form-btn {
+		border: none;
+		background-color: $title;
+		color: #fffff0;
+		font-weight: 600;
+		border-radius: 21px;
+		padding: 6px 60px;
+		cursor: pointer;
+	}
+}
+
+.contact-slider {
+	padding-bottom: 102px;
+
+	&__link {
+		position: relative;
+		margin-bottom: 20px;
+
+		&:hover {
+			.contact-slider__title {
+				opacity: 1;
+			}
+		}
+	}
+
+	&__img {
+		width: 170px;
+		height: 170px;
+		object-fit: cover;
+	}
+
+	&__title {
+		transition: all .5s;
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		background-color: rgba(#fff, .6);
+		color: $title;
+		@extend %title-font;
+		line-height: 22px;
+		padding: 0 5px;
+		text-align: center;
+		opacity: 0;
 	}
 }
