--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1003,6 +1003,50 @@
 	&__social-item {
 		margin-right: 20px;
 	}
+	&__items {
+		max-width: 730px;
+	}
+	&__item {
+		margin-bottom: 80px;
+	}
+	&__item-img {
+		max-width: 730px;
+	}
+	&__item-info {
+		padding: 25px 0 10px;
+		font-weight: 600;
+		font-size: 14px;
+		color: #707070;
+		a {
+			color: inherit;
+		}
+	}
+	&__item-title {
+		font-size: 24px;
+		line-height: 38px;
+		margin-bottom: 6px;
+		color: $title;
+		@extend %title-font;
+	}
+	&__blockquote {
+		background-color: rgba(223, 223, 223, 0.5);
+		margin-bottom: 50px;
+		padding: 54px 64px;
+		font-weight: 300;
+		font-style: italic;
+		font-size: 24px;
+		line-height: 38px;
+		text-align: center;
+	}
+	&__blockquote-author {
+		font-size: 16px;
+		line-height: 22px;
+		color: $title;
+		@extend %title-font;
+		margin-top: 23px;
+		padding-top: 23px;
+		position: absolute;
+	}
 }
 
 .recent-posts {
