feat: add blog 1

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -193,7 +193,7 @@
 
 .rightside-menu {
 	position: absolute;
-	z-index: 5;
+	z-index: 15;
 	right: 0;
 	top: 0;
 	bottom: 0;
@@ -263,7 +263,7 @@
 	background: rgba(#dfdfdf, 0.5);
 	padding: 13px 14px;
 	position: relative;
-	z-index: 999;
+	z-index: 10;
 
 	&__list {
 		display: flex;
@@ -1007,6 +1007,7 @@
 		max-width: 730px;
 	}
 	&__item {
+		position: relative;
 		margin-bottom: 80px;
 	}
 	&__item-img {
@@ -1045,7 +1046,52 @@
 		@extend %title-font;
 		margin-top: 23px;
 		padding-top: 23px;
+		position: relative;
+		font-style: normal;
+		&::before {
+			content: '';
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 0;
+			background: #6d7278;
+			border-radius: 1px;
+			height: 1px;
+			width: 200px;
+			margin: 0 auto;
+		}
+	}
+	&__item-popup {
 		position: absolute;
+		left: 50%;
+		top: 40%;
+		transform: translate(-50%, -50%);
+		cursor: pointer;
+	}
+}
+
+.article-popup {
+	&__box {
+		position: relative;
+	}
+}
+
+.article-slider {
+	&__arrow {
+		padding: 0;
+		border: none;
+		background-color: transparent;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		z-index: 10;
+		cursor: pointer;
+	}
+	&__arrowleft {
+		left: 16px;
+	}
+	&__arrowright {
+		right: 16px;
 	}
 }
 
@@ -1099,5 +1145,31 @@
 		top: 10px;
 		right: 13px;
 		cursor: pointer;
+	}
+}
+
+.pagination {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	&__list {
+		display: flex;
+	}
+	&__list-item {
+		margin: 0 6px;
+	}
+	&__arrow {
+		margin: 0 6px;
+	}
+	&__arrow--disabled {
+		display: none;
+	}
+	&__list-num {
+		font-weight: 600;
+		font-size: 14px;
+		color: #707070;
+	}
+	&__list-num--active {
+		color: $title;
 	}
 }
