--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -849,7 +849,7 @@
 		margin-bottom: 20px;
 	}
 
-	&__social-item + .contact__social-item {
+	&__social-item+.contact__social-item {
 		padding-left: 40px;
 	}
 
@@ -963,13 +963,16 @@
 
 .blog {
 	padding: 60px 0 100px;
+
 	&__inner {
 		display: flex;
 		justify-content: space-between;
 	}
+
 	&__category {
 		margin-bottom: 36px;
 	}
+
 	&__category-title,
 	&__tags-title {
 		margin-bottom: 15px;
@@ -977,15 +980,19 @@
 		@extend %title-font;
 		line-height: 23px;
 	}
+
 	&__category-item {
 		margin-bottom: 12px;
 	}
+
 	&__category-link {
 		color: inherit;
 	}
+
 	&__tags {
 		margin-bottom: 50px;
 	}
+
 	&__tags-link {
 		color: #8f8d8d;
 		font-weight: 600;
@@ -997,31 +1004,39 @@
 		border: 1px solid rgba(#454647, 0.5);
 		border-radius: 14px;
 	}
+
 	&__social {
 		display: flex;
 	}
+
 	&__social-item {
 		margin-right: 20px;
 	}
+
 	&__items {
 		max-width: 730px;
 	}
+
 	&__item {
 		position: relative;
 		margin-bottom: 80px;
 	}
+
 	&__item-img {
 		max-width: 730px;
 	}
+
 	&__item-info {
 		padding: 25px 0 10px;
 		font-weight: 600;
 		font-size: 14px;
 		color: #707070;
+
 		a {
 			color: inherit;
 		}
 	}
+
 	&__item-title {
 		font-size: 24px;
 		line-height: 38px;
@@ -1029,6 +1044,7 @@
 		color: $title;
 		@extend %title-font;
 	}
+
 	&__blockquote {
 		background-color: rgba(223, 223, 223, 0.5);
 		margin-bottom: 50px;
@@ -1039,6 +1055,7 @@
 		line-height: 38px;
 		text-align: center;
 	}
+
 	&__blockquote-author {
 		font-size: 16px;
 		line-height: 22px;
@@ -1048,6 +1065,7 @@
 		padding-top: 23px;
 		position: relative;
 		font-style: normal;
+
 		&::before {
 			content: '';
 			position: absolute;
@@ -1061,6 +1079,7 @@
 			margin: 0 auto;
 		}
 	}
+
 	&__item-popup {
 		position: absolute;
 		left: 50%;
@@ -1087,9 +1106,11 @@
 		z-index: 10;
 		cursor: pointer;
 	}
+
 	&__arrowleft {
 		left: 16px;
 	}
+
 	&__arrowright {
 		right: 16px;
 	}
@@ -1097,19 +1118,23 @@
 
 .recent-posts {
 	margin-bottom: 40px;
+
 	&__title {
 		margin-bottom: 24px;
 		color: $title;
 		@extend %title-font;
 		line-height: 23px;
 	}
+
 	&__item {
 		margin-bottom: 11px;
 	}
+
 	&__item-title {
 		display: block;
 		color: inherit;
 	}
+
 	&__date,
 	&__author {
 		color: #a1a1a1;
@@ -1120,16 +1145,19 @@
 .aside {
 	width: 350px;
 	margin-left: 30px;
+
 	&__search {
 		position: relative;
 		margin-bottom: 40px;
 	}
+
 	&__search-input {
 		padding: 6px 45px 6px 18px;
 		border-radius: 20px;
 		border: 1px solid rgba($title, 0.7);
 		display: block;
 		width: 100%;
+
 		&::placeholder {
 			font-family: 'Open Sans', sans-serif;
 			font-size: 14px;
@@ -1138,6 +1166,7 @@
 			color: #a1a1a1;
 		}
 	}
+
 	&__search-btn {
 		border: none;
 		background-color: transparent;
@@ -1152,28 +1181,233 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+
 	&__list {
 		display: flex;
 	}
+
 	&__list-item {
 		margin: 0 6px;
 	}
+
 	&__arrow {
 		margin: 0 6px;
 	}
+
 	&__arrow--disabled {
 		opacity: 0;
 		pointer-events: none;
 	}
+
 	&__list-num {
 		font-weight: 600;
 		font-size: 14px;
 		color: #707070;
 	}
+
 	&__list-num--active {
 		color: $title;
 	}
 }
 
 .blog-one__item {
+	p {
+		margin-bottom: 40px;
+	}
+
+	blockquote {
+		font-size: 24px;
+		font-weight: 300;
+		font-style: italic;
+		color: $title;
+		margin-bottom: 30px;
+		padding: 0 40px;
+	}
+
+	.blog__blockquote-author::before {
+		margin-right: auto;
+		margin-left: 0;
+	}
+}
+
+.blog-one {
+	&__tags {
+		margin-bottom: 30px;
+	}
+
+	&__tags-title {
+		color: $title;
+		@extend %title-font;
+		font-size: 20px;
+		line-height: 31px;
+		margin-bottom: 15px;
+	}
+
+	&__tags-link {
+		margin-bottom: 10px;
+		margin-right: 23px;
+		padding: 0 16px;
+		color: #8F8D8D;
+		font-size: 14px;
+		font-weight: 600;
+		border-radius: 14px;
+		border: 1px solid rgba(#454647, 0.5);
+		display: inline-block;
+	}
+
+	&__links {
+		margin-bottom: 35px;
+		padding: 40px 0 30px;
+		border-top: 1px solid #DFDFDf;
+		border-bottom: 1px solid #DFDFDf;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&__link {
+		width: 243px;
+		position: relative;
+		color: #707070;
+		font-size: 14px;
+		font-weight: 600;
+
+		&::before {
+			content: '';
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			width: 12px;
+			height: 23px;
+		}
+	}
+
+	&__link-prev {
+		padding-left: 44px;
+
+		&::before {
+			background-image: url(../images/arrow-prev.svg);
+			left: 0;
+		}
+	}
+
+	&__link-next {
+		padding-right: 44px;
+		text-align: right;
+
+		&::before {
+			background-image: url(../images/arrow-next.svg);
+			right: 0;
+		}
+	}
+
+	&__comments-title {
+		color: $title;
+		@extend %title-font;
+		line-height: 31px;
+		font-size: 20px;
+		margin-bottom: 15px;
+	}
+
+	&__comments-item {
+		display: flex;
+		justify-content: space-between;
+		align-items: start;
+		margin-bottom: 40px;
+	}
+
+	&__comments-avatar {
+		width: 64px;
+		height: 64px;
+		object-fit: cover;
+		border-radius: 50%;
+		margin-right: 13px;
+	}
+
+	&__reply {
+		background-color: transparent;
+		margin-left: 5px;
+		border: none;
+		padding: 0;
+		font-size: 14px;
+		font-weight: 600;
+		color: #707070;
+		cursor: pointer;
+	}
+
+	&__comments-name {
+		color: $title;
+		@extend %title-font;
+		line-height: 23px;
+	}
+
+	&__comments-date {
+		margin-bottom: 10px;
+		font-size: 14px;
+		color: #a1a1a1;
+	}
+
+	&__form {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	&__form-title {
+		margin-bottom: 25px;
+		color: $title;
+		@extend %title-font;
+		line-height: 23px;
+	}
+
+	&__form-textarea {
+		width: 100%;
+		border: 1px solid #dfdfdf;
+		border-radius: 24px;
+		padding: 14px 17px;
+		min-height: 125px;
+		resize: none;
+		margin-bottom: 12px;
+
+		&::placeholder {
+			color: #a1a1a1;
+			font-family: 'Open Sans', sans-serif;
+			font-size: 16px;
+			line-height: 27px;
+			font-weight: 400;
+		}
+	}
+
+	&__form-input {
+		border: 1px solid #dfdfdf;
+		border-radius: 20px;
+		padding: 6px 17px;
+		margin-bottom: 20px;
+		width: 48%;
+
+		&::placeholder {
+			color: #a1a1a1;
+			font-family: 'Open Sans', sans-serif;
+			font-size: 16px;
+			line-height: 27px;
+			font-weight: 400;
+		}
+	}
+
+	&__form-label {
+		width: 100%;
+		margin-bottom: 20px;
+		font-size: 14px;
+		color: #a1a1a1;
+	}
+
+	&__form-btn {
+		border: none;
+		background-color: $title;
+		color: #fffff0;
+		font-weight: 600;
+		border-radius: 21px;
+		padding: 6px 60px;
+		cursor: pointer;
+	}
+
 }
