--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -18,6 +18,9 @@
 		padding: 0;
 		cursor: pointer;
 	}
+	&__btn-menu {
+		display: none;
+	}
 }
 
 .logo {
@@ -267,12 +270,18 @@
 
 	&__list {
 		display: flex;
+		overflow-x: auto;
+	}
+
+	&__item {
+		position: relative;
+		padding-right: 8px;
 	}
 
 	&__item::after {
 		content: '/';
-		margin-left: -4px;
-		margin-right: 4px;
+
+		position: absolute;
 	}
 
 	&__item:last-child::after {
@@ -378,12 +387,17 @@
 
 .collection {
 	display: grid;
-	grid-template-columns: repeat(5, 1fr);
+	grid-template-columns: repeat(5, minmax(0, 1fr)); // Ключевое исправление
 	grid-gap: 30px;
 	padding-bottom: 70px;
+	width: 100%;
+	max-width: 100%;
+	overflow: hidden;
 
 	&__item {
 		position: relative;
+		overflow: hidden;
+		aspect-ratio: 1/1; // Фиксируем пропорции квадрата
 
 		&:hover {
 			.collection__info {
@@ -393,43 +407,48 @@
 	}
 
 	&__images {
-		min-height: 350px;
+		width: 100%;
+		height: 100%;
 		object-fit: cover;
+		display: block;
 	}
 
 	&__info {
 		position: absolute;
-		top: 0;
-		bottom: 0;
-		right: 0;
-		left: 0;
+		inset: 0;
 		background-color: rgba(#fff, 0.7);
-		padding: 10px;
+		padding: 20px;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
 		opacity: 0;
-		transition: all 0.5s;
+		transition: opacity 0.5s ease; // Анимируем только opacity!
+		text-align: center;
+		margin: 0 auto;
+		width: 100%;
+		box-sizing: border-box;
 	}
 
 	&__info-title {
 		font-size: 20px;
-		line-height: 25px;
+		line-height: 1.25;
 		color: $title;
 		padding-bottom: 19px;
-		margin-bottom: 19px;
+		margin: 0 auto 19px;
 		position: relative;
+		width: 90%;
+		max-width: 300px;
 
 		&::after {
 			content: '';
-			margin: 0 auto;
-			bottom: 0;
-			left: 0;
-			right: 0;
 			position: absolute;
-			height: 1px;
+			bottom: 0;
+			left: 50%;
+			transform: translateX(-50%);
 			width: 80%;
+			max-width: 200px;
+			height: 1px;
 			background: #6d7278;
 		}
 	}
@@ -438,6 +457,9 @@
 		font-weight: 600;
 		font-size: 14px;
 		color: #707070;
+		width: 90%;
+		max-width: 300px;
+		margin: 0 auto;
 	}
 }
 
@@ -849,7 +871,7 @@
 		margin-bottom: 20px;
 	}
 
-	&__social-item+.contact__social-item {
+	&__social-item + .contact__social-item {
 		padding-left: 40px;
 	}
 
@@ -1247,7 +1269,7 @@
 		margin-bottom: 10px;
 		margin-right: 23px;
 		padding: 0 16px;
-		color: #8F8D8D;
+		color: #8f8d8d;
 		font-size: 14px;
 		font-weight: 600;
 		border-radius: 14px;
@@ -1258,8 +1280,8 @@
 	&__links {
 		margin-bottom: 35px;
 		padding: 40px 0 30px;
-		border-top: 1px solid #DFDFDf;
-		border-bottom: 1px solid #DFDFDf;
+		border-top: 1px solid #dfdfdf;
+		border-bottom: 1px solid #dfdfdf;
 		display: flex;
 		justify-content: space-between;
 	}
@@ -1409,5 +1431,6 @@
 		padding: 6px 60px;
 		cursor: pointer;
 	}
-
 }
+
+@import 'media';
