--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -137,6 +137,11 @@
 			padding: 80px 0;
 		}
 	}
+	.partners {
+		&__items {
+			grid-template-columns: repeat(3, 1fr);
+		}
+	}
 }
 
 @media (max-width: 650px) {
@@ -282,12 +287,21 @@
 			grid-column: 1;
 			grid-row: 1;
 		}
+		&.gallery-page {
+			.gallery__item:nth-child(8) {
+				grid-column: 1;
+				grid-row: 1;
+			}
+		}
 	}
 	.inspiration {
 		&__item-text,
 		&__num {
 			font-size: 16px;
 			line-height: 23px;
+		}
+		&__item-text {
+			margin-right: 10px;
 		}
 	}
 }
